--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ main {
 
 /* button */
 button {
+  user-select: none;
   padding: 0.75rem 1.5rem;
   border: none;
   border-radius: 4px;
@@ -65,7 +66,7 @@ button {
   font-size: 1rem;
   font-weight: 500;
   cursor: pointer;
-  width: 60%;
+  width: 80%;
   transition: all 0.3s ease;
 }
 
