style: Adiciona ícones do font awesome no documento

--- a/css/style.css
+++ b/css/style.css
@@ -77,3 +77,16 @@ button:hover {
 button:active {
   transform: scale(0.95);
 }
+
+@keyframes load {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(720deg);
+  }
+}
+
+.load {
+  animation: load 0.5s ease-in-out;
+}
